Minify and optimise inline svg, fix for issue: https://trello.com/c/0J48SdSZ/257-edit-screen-for-wt-suites-should-allow-you-to-add-a-wt-without-having-to-open-the-collapsed-element

--- a/sites/all/themes/walkhub_theme/sass/page/_node-walkthrough-set-edit.sass
+++ b/sites/all/themes/walkhub_theme/sass/page/_node-walkthrough-set-edit.sass
@@ -345,3 +345,8 @@
       label
         width: 100%
         margin-right: 0
+
+.page-node-add-walkthrough-set,
+.page-node-edit.node-type-walkthrough-set
+  .ajax-new-content .walkthrough-step-edit .walkthrough-step-container
+    display: block!important
